fixes mobile navbar spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,4 @@
   box-sizing: border-box;
 }
 
-/* * { border: 1px solid red} */
+* { border: 1px solid red}
